# CPP-Scripting-Test

./: CMakeLists.txt
App/: CMakeLists.txt  main.cpp
Core/: CMakeLists.txt
Core/private/: Core.cpp  ScriptManager.cpp  core.cpp
Core/public/: Core.hh  ScriptManager.hh  core.hh
Scripts/: CMakeLists.txt
Scripts/private/: Test1.cpp  TestScript.cpp  mylib.cpp
Scripts/public/: Test2.hh  TestScript.hh  mylib.hh
cmake/: platform_defines.cmake
